# Neuron

./: .gitignore  AGENTS.md  AGENT_LOG.md  CLAUDE.md  Cargo.toml  NEURON_TERMINAL_REPORT.md  PROJECT_CHARTER.md  SETUP.md  design-system-spec.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.githooks/: pre-commit
Neuron Design/: Neuron App.html  Neuron App.standalone-src.html  README.md  SKILL.md  colors_and_type.css
Neuron Design/app/: canvas.jsx  data.js  icons.jsx  inspector.jsx  main.jsx  routes.jsx  shell.jsx  styles.css  terminal-data.js  terminal.css  terminal.jsx
Neuron Design/preview/: brand-icons.html  brand-logo.html  colors-primitives.html  colors-semantic.html  colors-status.html  components-badges.html  components-buttons.html  components-forms.html  components-marketplace-card.html  components-nodecard.html  components-waterfall.html  spacing-glow.html  spacing-radius.html  spacing-scale.html  spacing-shadows.html  type-body.html  type-display.html  type-families.html
app/: eslint.config.js  index.html  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
app/src/: App.test.tsx  App.tsx  main.tsx  styles.css  vite-env.d.ts
docs/adr/: 0001-tauri-over-electron.md  0004-frontend-first-pivot.md  0005-mock-to-real-migration-pattern.md  0006-event-naming-and-mailbox-realtime.md  0007-id-strategy.md  0008-sidecar-ipc-framing.md
docs/work-packages/: README.md  WP-W2-01-tauri-scaffold.md  WP-W2-02-sqlite-schema.md  WP-W2-03-command-surface.md  WP-W3-overview.md  (+34 more)
src-tauri/: Cargo.toml  MCP.md  build.rs  tauri.conf.json  test-manifest.rc
src-tauri/capabilities/: default.json
src-tauri/examples/: pty_smoke.rs
src-tauri/migrations/: 0001_init.sql  0002_constraints.sql  0003_panes_approval.sql  0004_settings.sql  0005_span_export.sql  0006_swarm_jobs.sql  0007_swarm_verdict.sql  0008_swarm_decision.sql  0009_orchestrator_messages.sql  0010_mailbox_eventbus.sql  0011_swarm_jobs_source.sql  0012_pane_lines_unique.sql
src-tauri/sidecar/agent_runtime/: .gitignore  README.md  pyproject.toml
src-tauri/sidecar/agent_runtime/agent_runtime/: __init__.py  __main__.py  framing.py  secrets.py
src-tauri/sidecar/agent_runtime/agent_runtime/tests/: test_daily_summary.py  test_framing.py
src-tauri/sidecar/agent_runtime/agent_runtime/workflows/: __init__.py  daily_summary.py
src-tauri/src/: db.rs  error.rs  events.rs  lib.rs  main.rs  models.rs  secrets.rs  test_support.rs  text.rs  time.rs  tuning.rs
src-tauri/src/bootstrap/: exit.rs  mod.rs  setup.rs  specta.rs
src-tauri/src/commands/: agents.rs  health.rs  mailbox.rs  mcp.rs  me.rs  mod.rs  runs.rs  secrets.rs  settings.rs  swarm.rs  swarm_term.rs  terminal.rs  util.rs  workflows.rs
src-tauri/src/commands/mailbox/: mod.rs  tests.rs
src-tauri/src/commands/runs/: mod.rs  tests.rs
src-tauri/src/commands/swarm/: agents.rs  dispatch.rs  jobs.rs  orchestrator.rs  profiles.rs  run.rs  tests.rs
src-tauri/src/db/: mod.rs  seed.rs  tests.rs
src-tauri/src/mcp/: client.rs  manifests.rs  mod.rs  registry.rs
src-tauri/src/mcp/client/: connection.rs  mod.rs  rpc.rs  tests.rs  types.rs
src-tauri/src/mcp/manifests/: browser.json  figma.json  filesystem.json  github.json  linear.json  memory.json  notion.json  postgres.json  sentry.json  slack.json  stripe.json  vector-db.json
src-tauri/src/mcp/registry/: mod.rs  spawn.rs  store.rs  tests.rs
src-tauri/src/models/: agent.rs  mailbox.rs  mcp.rs  me.rs  mod.rs  pane.rs  profile.rs  run.rs  workflow.rs
src-tauri/src/sidecar/: agent.rs  framing.rs  mod.rs  terminal.rs
src-tauri/src/sidecar/agent/: mod.rs  reader.rs  spawn.rs  tests.rs  wire.rs
src-tauri/src/sidecar/terminal/: approval.rs  command.rs  mod.rs  reader.rs  tests.rs  text.rs
src-tauri/src/swarm/: agent_dispatcher.rs  agent_registry.rs  binding.rs  brain.rs  help_request.rs  llm_json.rs  mailbox_bus.rs  mod.rs  persistent_session.rs  profile.rs  projector.rs  transport.rs
src-tauri/src/swarm/agent_dispatcher/: config.rs  invoke.rs  invoker.rs  mod.rs  routing.rs  tests.rs
src-tauri/src/swarm/agent_registry/: config.rs  event.rs  mod.rs  registry.rs  slot.rs  status.rs  tests.rs
src-tauri/src/swarm/agents/: backend-builder.md  backend-reviewer.md  coordinator.md  frontend-builder.md  frontend-reviewer.md  integration-tester.md  orchestrator.md  planner.md  reviewer.md  scout.md
src-tauri/src/swarm/agents/term/: backend-builder.md  backend-reviewer.md  coordinator.md  frontend-builder.md  frontend-reviewer.md  integration-tester.md  orchestrator.md  planner.md  scout.md
src-tauri/src/swarm/binding/: args.rs  env.rs  mod.rs  resolve.rs  tests.rs
src-tauri/src/swarm/brain/: action.rs  events.rs  finish.rs  invoker.rs  mod.rs  prompt.rs  tests.rs
src-tauri/src/swarm/coordinator/: decision.rs  fsm.rs  job.rs  mod.rs  orchestrator.rs  orchestrator_session.rs  store.rs  verdict.rs
src-tauri/src/swarm/coordinator/job/: event.rs  mod.rs  model.rs  registry.rs  state.rs  tests.rs
src-tauri/src/swarm/coordinator/orchestrator_session/: mod.rs  model.rs  render.rs  store.rs  tests.rs
src-tauri/src/swarm/coordinator/store/: cols.rs  mod.rs  read.rs  recovery.rs  tests.rs  write.rs
src-tauri/src/swarm/mailbox_bus/: bus.rs  envelope.rs  event.rs  mod.rs  tests.rs
src-tauri/src/swarm/persistent_session/: event.rs  mod.rs  read.rs  session.rs  tests.rs
src-tauri/src/swarm/profile/: mod.rs  parser.rs  registry.rs  tests.rs  types.rs
src-tauri/src/swarm/projector/: helpers.rs  mod.rs  outcome.rs  persistence.rs  projection.rs  query.rs  tests.rs
src-tauri/src/swarm/transport/: classify.rs  event.rs  mod.rs  ring.rs  subprocess.rs  tests.rs
src-tauri/src/swarm_term/: bridge.rs  hierarchy.rs  home_isolation.rs  lifecycle.rs  marker.rs  mod.rs  persona.rs  router.rs  session.rs
src-tauri/src/telemetry/: exporter.rs  mod.rs  otlp.rs  sampling.rs  tests.rs
src-tauri/src/telemetry/tests/fixtures/: expected.json
tasks/: agent-briefs-2026-04-29.md  refactor-v1.md  report-29-04-26.md  swarm-phase-1.md  swarm-phase-2a.md  swarm-phase-2b.md  swarm-phase-2c.md  todo.md
(+107 files in other folders)
